force-app/main/default/objects/Circle_Account__c/Circle_Account__c.object-meta.xml
<CustomObject>
    <label>Circle Mint</label>
    <nameField>
        <label>Circle Mint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circle Mints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>