force-app/main/default/objects/Circle_Account__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Circle_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>