force-app/main/default/objects/Circle_Account__c/fields/Accounts_API__c.field-meta.xml
<CustomField>
    <fullName>Accounts_API__c</fullName>
    <label>Accounts API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-Party (internal use)</fullName>
            </value>
            <value>
                <fullName>Third-Party</fullName>
            </value>
            <value>
                <fullName>BTC/ETH Beta</fullName>
            </value>
            <value>
                <fullName>Exchange Beta</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>