force-app/main/default/objects/Circle_Account__c/fields/Api_Key_Generated__c.field-meta.xml
<CustomField>
    <fullName>Api_Key_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Api Key Generated</label>
    <type>Checkbox</type>
</CustomField>