force-app/main/default/objects/Circle_Account__c/fields/Application_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_Date__c</fullName>
    <description>Used to document when the Circle Account application was approved</description>
    <inlineHelpText>Used to document when the Circle Account application was approved</inlineHelpText>
    <label>Application Approved Date</label>
    <type>Date</type>
</CustomField>