force-app/main/default/objects/Circle_Account__c/fields/Application_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Changed_Date__c</fullName>
    <label>Application Status Changed Date</label>
    <type>Date</type>
</CustomField>