force-app/main/default/objects/Circle_Account__c/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <description>Date CA application was submitted.</description>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>