force-app/main/default/objects/Circle_Account__c/fields/Burn_Volume_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Burn_Volume_Last_30_Days__c</fullName>
    <label>Burn Volume Last 30 Days</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>