force-app/main/default/objects/Circle_Account__c/fields/Business_Website__c.field-meta.xml
<CustomField>
    <fullName>Business_Website__c</fullName>
    <description>Business / Company website or domain</description>
    <label>Business Website</label>
    <type>Url</type>
</CustomField>