force-app/main/default/objects/Circle_Account__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Circle Account</description>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Lookup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipName>Circle_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>