force-app/main/default/objects/Circle_Account__c/fields/Circle_Account_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Qualification_Status__c</fullName>
    <label>Circle Mint Qualification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>