force-app/main/default/objects/Circle_Account__c/fields/Circle_Account_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Circle Account_Record_Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>