force-app/main/default/objects/Circle_Account__c/fields/Circle_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Circle_Customer_Id__c</fullName>
    <label>Circle Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>