force-app/main/default/objects/Circle_Account__c/fields/Contracted_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Entity__c</fullName>
    <defaultValue>&apos;Circle Internet Financial, LLC&apos;</defaultValue>
    <description>This field is used to document which Circle entity the customer is contracted with.</description>
    <inlineHelpText>This field is used to document which Circle entity the customer is contracted with.</inlineHelpText>
    <label>Contracted Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circle Internet Financial, LLC</fullName>
            </value>
            <value>
                <fullName>Circle Singapore</fullName>
            </value>
            <value>
                <fullName>Circle Technology Services, LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>