force-app/main/default/objects/Circle_Account__c/fields/Core_API__c.field-meta.xml
<CustomField>
    <fullName>Core_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core API</label>
    <type>Checkbox</type>
</CustomField>