force-app/main/default/objects/Circle_Account__c/fields/Core_API_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_API_Number__c</fullName>
    <formula>IF( Core_API__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core API Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>