force-app/main/default/objects/Circle_Account__c/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <description>Location of incorporation (Country)</description>
    <label>Country of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>