force-app/main/default/objects/Circle_Account__c/fields/Current_Gross_Burn__c.field-meta.xml
<CustomField>
    <fullName>Current_Gross_Burn__c</fullName>
    <label>Current Gross Burn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>