force-app/main/default/objects/Circle_Account__c/fields/Current_PR_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_PR_Status__c</fullName>
    <description>Tracks the current status of a period review</description>
    <inlineHelpText>Current status of a periodic review.</inlineHelpText>
    <label>Current PR Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>