force-app/main/default/objects/Circle_Account__c/fields/Current_PR_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_PR_Status_Date__c</fullName>
    <description>Date of Periodic Review Launch</description>
    <inlineHelpText>Date of Periodic Review Launch</inlineHelpText>
    <label>Current PR Status Date</label>
    <type>DateTime</type>
</CustomField>