force-app/main/default/objects/Circle_Account__c/fields/Deposit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Limit__c</fullName>
    <description>What is the customer&apos;s deposit limit.</description>
    <label>Deposit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>