force-app/main/default/objects/Circle_Account__c/fields/Doing_Business_As_DBA__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As_DBA__c</fullName>
    <label>Doing Business As (DBA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>