force-app/main/default/objects/Circle_Account__c/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <label>Email Verified</label>
    <length>20</length>
    <type>Text</type>
</CustomField>