force-app/main/default/objects/Circle_Account__c/fields/Entity_Type_PQ_0__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_PQ_0__c</fullName>
    <label>Entity Type PQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity_Type_PQ</valueSetName>
    </valueSet>
</CustomField>