force-app/main/default/objects/Circle_Account__c/fields/First_Transaction__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction__c</fullName>
    <label>First Transaction</label>
    <type>Date</type>
</CustomField>