force-app/main/default/objects/Circle_Account__c/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <description>First Minting Date</description>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>