force-app/main/default/objects/Circle_Account__c/fields/Hubspot_Circle_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Circle_Id__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Circle Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>