force-app/main/default/objects/Circle_Account__c/fields/Hubspot_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Created_Date__c</fullName>
    <label>Hubspot Created Date</label>
    <type>Date</type>
</CustomField>