force-app/main/default/objects/Circle_Account__c/fields/Latest_RFI_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_RFI_Date__c</fullName>
    <label>Latest RFI Date</label>
    <type>DateTime</type>
</CustomField>