force-app/main/default/objects/Circle_Account__c/fields/Logged_in_BD__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_BD__c</fullName>
    <formula>IF(  Account_Lookup__r.Business_Development_Owner__r.Id  = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in BD</label>
    <type>Checkbox</type>
</CustomField>