force-app/main/default/objects/Circle_Account__c/fields/Logged_in_CSM__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_CSM__c</fullName>
    <formula>IF(  Account_Lookup__r.Customer_Success_Manager__r.Id  = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in CSM</label>
    <type>Checkbox</type>
</CustomField>