force-app/main/default/objects/Circle_Account__c/fields/Logged_In_PM__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_PM__c</fullName>
    <formula>IF( Account_Lookup__r.Partner_Manager__r.Id = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In PM</label>
    <type>Checkbox</type>
</CustomField>