force-app/main/default/objects/Circle_Account__c/fields/Mint_Volume_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Mint_Volume_Last_30_Days__c</fullName>
    <label>Mint Volume Last 30 Days</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>