force-app/main/default/objects/Circle_Account__c/fields/Monthly_Avg_Gross_Burn__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Avg_Gross_Burn__c</fullName>
    <label>Monthly Avg Gross Burn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>