force-app/main/default/objects/Circle_Account__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>