force-app/main/default/objects/Circle_Account__c/fields/Payment_Rails__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rails__c</fullName>
    <label>Payment Rails</label>
    <length>50</length>
    <type>Text</type>
</CustomField>