force-app/main/default/objects/Circle_Account__c/fields/PR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PR_Due_Date__c</fullName>
    <description>Documents the due date for the Periodic Review</description>
    <inlineHelpText>Periodic Review due date before the customer is at risk for suspension.</inlineHelpText>
    <label>PR Due Date</label>
    <type>DateTime</type>
</CustomField>