force-app/main/default/objects/Circle_Account__c/fields/PR_Source__c.field-meta.xml
<CustomField>
    <fullName>PR_Source__c</fullName>
    <description>Tracks where the PR data came from. Nova or COP</description>
    <inlineHelpText>Shows if this Periodic Review is being process in NOVA or COP</inlineHelpText>
    <label>PR Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>