force-app/main/default/objects/Circle_Account__c/fields/Product_Application_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Application_Interest__c</fullName>
    <label>Product Application Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>account</fullName>
                <label>Circle Account</label>
            </value>
            <value>
                <fullName>yield</fullName>
                <label>Circle Yield</label>
            </value>
            <value>
                <fullName>api</fullName>
                <label>Circle APIs</label>
            </value>
            <value>
                <fullName>Circle APIs</fullName>
                <isActive>false</isActive>
                <label>Circle APIs</label>
            </value>
            <value>
                <fullName>Circle Account</fullName>
                <isActive>false</isActive>
                <label>Circle Account</label>
            </value>
            <value>
                <fullName>Circle Yield</fullName>
                <isActive>false</isActive>
                <label>Circle Yield</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>