force-app/main/default/objects/Circle_Account__c/fields/Read_Only_API__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Only API</label>
    <type>Checkbox</type>
</CustomField>