force-app/main/default/objects/Circle_Account__c/fields/Read_Only_API_Number__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_API_Number__c</fullName>
    <formula>IF( Read_Only_API__c  = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read Only API Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>