force-app/main/default/objects/Circle_Account__c/fields/SEN__c.field-meta.xml
<CustomField>
    <fullName>SEN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the customer have a SEN account.</description>
    <label>SEN</label>
    <type>Checkbox</type>
</CustomField>