force-app/main/default/objects/Circle_Account__c/fields/SEN_Number__c.field-meta.xml
<CustomField>
    <fullName>SEN_Number__c</fullName>
    <formula>IF( SEN__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>