force-app/main/default/objects/Circle_Account__c/fields/Signet__c.field-meta.xml
<CustomField>
    <fullName>Signet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the customer have a SigNet account.</description>
    <label>Signet</label>
    <type>Checkbox</type>
</CustomField>