force-app/main/default/objects/Circle_Account__c/fields/Signet_Number__c.field-meta.xml
<CustomField>
    <fullName>Signet_Number__c</fullName>
    <formula>IF( Signet__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signet Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>