force-app/main/default/objects/Circle_Account__c/fields/Starting_Gross_Mint__c.field-meta.xml
<CustomField>
    <fullName>Starting_Gross_Mint__c</fullName>
    <label>Starting Gross Mint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>