force-app/main/default/objects/Circle_Account__c/fields/Suspension_Tag__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Tag__c</fullName>
    <label>Suspension Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>