force-app/main/default/objects/Circle_Account__c/fields/USDC_Express__c.field-meta.xml
<CustomField>
    <fullName>USDC_Express__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USDC Express</label>
    <type>Checkbox</type>
</CustomField>