force-app/main/default/objects/Circle_Account__c/fields/USDC_Express_Number__c.field-meta.xml
<CustomField>
    <fullName>USDC_Express_Number__c</fullName>
    <formula>IF( USDC_Express__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USDC Express Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>