force-app/main/default/objects/Circle_Account__c/fields/USDC_Express_Tokenization__c.field-meta.xml
<CustomField>
    <fullName>USDC_Express_Tokenization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the customer have USDC Express tokenization enabled.</description>
    <label>USDC Express Tokenization</label>
    <type>Checkbox</type>
</CustomField>