force-app/main/default/objects/Circle_Account__c/fields/USDC_Rewards_Application_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>USDC_Rewards_Application_Approved_Date__c</fullName>
    <label>USDC Rewards Application Approved Date</label>
    <type>Date</type>
</CustomField>