force-app/main/default/objects/Circle_Account__c/fields/USDC_Rewards_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>USDC_Rewards_Application_Status__c</fullName>
    <label>USDC Rewards Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Pending Submission</fullName>
                <label>Pending Customer</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending Revision</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>