force-app/main/default/objects/Circle_Account__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-ramp</fullName>
            </value>
            <value>
                <fullName>USDC Liquidity</fullName>
            </value>
            <value>
                <fullName>B2B Payments</fullName>
            </value>
            <value>
                <fullName>P2P Payments</fullName>
            </value>
            <value>
                <fullName>Sale of Goods</fullName>
            </value>
            <value>
                <fullName>Global Payouts</fullName>
            </value>
            <value>
                <fullName>NFT</fullName>
            </value>
            <value>
                <fullName>Corporate Treasury</fullName>
            </value>
            <value>
                <fullName>USDC Initiatives</fullName>
            </value>
            <value>
                <fullName>USDC Co-Marketing Initiatives</fullName>
            </value>
            <value>
                <fullName>Cross-Border Remittance</fullName>
            </value>
            <value>
                <fullName>Payment Service Providers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>